[gd_scene load_steps=4 format=3 uid="uid://pdev0f1t0knq"]

[ext_resource type="StyleBox" uid="uid://cexqa6lfqfde0" path="res://GUI/PanelStyle.tres" id="1_6ev0a"]
[ext_resource type="Script" path="res://GUI/visual_options_gui.gd" id="1_26nn0"]
[ext_resource type="LabelSettings" uid="uid://ccn58862b4853" path="res://GUI/disabledFeature_label_settings.tres" id="3_l4ai0"]

[node name="VisualOptionsGui" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
script = ExtResource("1_26nn0")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -179.0
offset_bottom = 84.0
grow_horizontal = 0
theme_override_styles/panel = ExtResource("1_6ev0a")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VisualOptionsLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Visual Options"
horizontal_alignment = 1

[node name="PointsSizeContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PointSizeLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PointsSizeContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Point Size:"
vertical_alignment = 1

[node name="PointSizeSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/PointsSizeContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="PlanetOptionsContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlanetOptionsLabel2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PlanetOptionsContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Planet Options"
horizontal_alignment = 1

[node name="PlanetRadiusContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PlanetOptionsContainer"]
layout_mode = 2

[node name="PlanetRadiusLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PlanetOptionsContainer/PlanetRadiusContainer"]
layout_mode = 2
tooltip_text = "Does work, but results are always scaled to Earth-Size in this version."
mouse_filter = 1
theme_override_font_sizes/font_size = 0
text = "Planet Radius:"
label_settings = ExtResource("3_l4ai0")

[node name="PlanetRadiusLineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/PlanetOptionsContainer/PlanetRadiusContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="DebugContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlanetMassLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/DebugContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Planet Mass: "

[node name="PlanetRadiusLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/DebugContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Planet Radius: "

[node name="VisualizeAtmosphereLayersCheckButton2" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Visualize Atmosphere"

[node name="2DGraphsCheckButton" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "Show 2D Graphs"

[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/PointsSizeContainer/PointSizeSlider" to="." method="_on_point_size_slider_value_changed"]
[connection signal="text_changed" from="PanelContainer/MarginContainer/VBoxContainer/PlanetOptionsContainer/PlanetRadiusContainer/PlanetRadiusLineEdit" to="." method="_on_planet_radius_line_edit_text_changed"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/VisualizeAtmosphereLayersCheckButton2" to="." method="_on_visualize_atmosphere_layers_check_button_2_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/2DGraphsCheckButton" to="." method="_on_d_graphs_check_button_toggled"]
